@@ -115,15 +115,12 @@ fromwire_uri(ARGS_FROMWIRE) {
 	isc_buffer_activeregion(source, &region);
 	if (region.length < 4)
 		return (ISC_R_UNEXPECTEDEND);
-	RETERR(mem_tobuffer(target, region.base, 4));
-	isc_buffer_forward(source, 4);
 
 	/*
-	 * Target URI
+	 * Priority, weight and target URI
 	 */
-	RETERR(multitxt_fromwire(source, target));
-
-	return (ISC_R_SUCCESS);
+	isc_buffer_forward(source, region.length);
+	return (mem_tobuffer(target, region.base, region.length));
 }
 
 static inline isc_result_t
@@ -178,8 +175,6 @@ compare_uri(ARGS_COMPARE) {
 static inline isc_result_t
 fromstruct_uri(ARGS_FROMSTRUCT) {
 	dns_rdata_uri_t *uri = source;
-	isc_region_t region;
-	isc_uint8_t len;
 
 	REQUIRE(type == 256);
 	REQUIRE(source != NULL);
@@ -203,18 +198,6 @@ fromstruct_uri(ARGS_FROMSTRUCT) {
 	/*
 	 * Target URI
 	 */
-	len = 255U;
-	region.base = uri->target;
-	region.length = uri->tgt_len;
-	while (region.length > 0) {
-		REQUIRE(len == 255U);
-		len = uint8_fromregion(&region);
-		isc_region_consume(&region, 1);
-		if (region.length < len)
-			return (ISC_R_UNEXPECTEDEND);
-		isc_region_consume(&region, len);
-	}
-
 	return (mem_tobuffer(target, uri->target, uri->tgt_len));
 }
 
